<resources>
    <string name="app_name">Driving Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_kmstand">Kilometerstand</string>
    <string name="menu_statistik">Statistiken</string>
    <string name="menu_reisevorhersage">Reisevorhersage</string>
    <string name="menu_tankrechnung">Tankrechnungen</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add_car">AddCarActivity</string>
    <string name="car_added">Das Auto wurde erfolgreich hinzugefügt</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="title_km_angeben"><u>Kilometerstand angeben</u></string>
</resources>
